--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,6 +11,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>This webite is created with nodejs by sumit acharya. This helps users to get weather information from mapbox.com and darksky.net</p>
         <img class="portrait" src="/img/sumit_03.png">
     </div>
 
